kubernetes/apps/media/streamflow/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: streamflow
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`streamflow.${DOMAIN}`)
      kind: Rule
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
      services:
        - name: streamflow
          port: 5000
  tls: {}
